src/Domain/Compiler/Tests/Expression/__Baselines__/CharacterLiteral_Error_MultiCharacter-StashIr.error
error: Expected single quote (') character.
--> main.hs:8:10
  | 
8 | return 'abc';    }
  |          ^
